--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-font-family: <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet"> 
+head { 
+  font-family: <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet"> 
+}
