--- a/style.css
+++ b/style.css
@@ -1,63 +1,76 @@
-html,body {
+body {
     width: 100%;
-   height: 100%;
-    margin: 0;
-  }
-  
-  a:link {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-  }
-    a:visited {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-  class: glow;
-  }
-      p {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 15px;
-       color: white;
+    height: 100vh;
+    margin: 0; 
+    background-image: url('gradient-small.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 200%;
+}
 
-  }
-      h1 {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 40px;
-       color: white;
+.glow {
+    color: #ffffffb9;
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+    }
 
-  }
-      h2 {
-  font-family: 'Josefin Sans', sans-serif;   
-        font-size: 25px;
-        color: white;
-  }
-      .center {
+a {
+    font-family: 'Amiko', sans-serif;  
+    font-size: 20px;
+}
+
+a:link, a:visited {
+color: white;
+background-color: transparent;
+text-decoration: underline;
+}
+
+hr {
+    width: 600pt;
+    border: 5pt;
+    height: 3pt;
+    background-color: mintcream;
+    margin-top: 50px;
+
+}
+p {
+font-family: 'Josefin Sans', sans-serif;
+font-size: 20px;
+font-style: italic;
+color: white;
+sepe
+
+}
+
+h1 {
+font-family: 'Josefin Sans', sans-serif;
+font-size: 100px;
+color: white;
+font-stretch: wider;
+letter-spacing: 8px;
+padding-bottom: 0px;
+}
+
+h2 {
+font-family: 'Josefin Sans', sans-serif;   
+font-size: 50px;
+color: white;
+}
+
+.center {
 text-align: center;
-  }
-      .left {
-  text.align: left;
-  }
-      body {
-    background-color: #e0dbc9;
-  font-family: 'Amiko', sans-serif;   
-        font-size: 16px;
-  }
-  
-      .glow {
-  font-size: 40px;
-  color: #ebebeb;
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-  }
+}
 
-  @-webkit-keyframes glow {
-  from {
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  to {
-  text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-  
+.left {
+text.align: left;
+}
+
+@-webkit-keyframes glow {
+    from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
