--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 200%;
+    font-family: 'Josefin Sans', sans-serif;
+    color: white;
 }
 
 .glow {
@@ -33,14 +35,12 @@ hr {
 
 }
 p {
-font-family: 'Josefin Sans', sans-serif;
 font-size: 20px;
 font-style: italic;
 color: white;
 }
 
 h1 {
-font-family: 'Josefin Sans', sans-serif;
 font-size: 100px;
 color: white;
 font-stretch: wider;
@@ -48,14 +48,57 @@ letter-spacing: 8px;
 margin: 20px;
 }
 
-h2 {
-font-family: 'Josefin Sans', sans-serif;   
+h2 {  
 font-size: 50px;
 color: white;
+}
+h3 {
+    
+}
+tr {
+    font-size: 20pt;
+    width: 100px;
+    height: 50px;
+}
+input {
+    width: 20px;
+    height: 20px;
+}
+button {
+    width: 120px;
+    height: 50px;
+    font-size: 20px;
+    font-family:'Amiko', sans-serif;
+}
+.larger {
+    width: 50px;
+    height: 50px;
 }
 
 .center {
 text-align: center;
+}
+.linie {
+    width: auto;
+    height: 2pt;
+    background-color: mintcream;
+    margin: 0px;
+    margin-top: 10pt;
+}
+button {
+    border-color: white;
+}
+.bold {
+    font-weight: bold;
+    font-size: 20px ;
+}
+.underline {
+    font-size: 20pt;
+    text-decoration: underline;
+    padding-bottom: 10pt;
+}
+.ergebnisse {
+    font-size: 30px;
 }
 
 @-webkit-keyframes glow {
