--- a/style.css
+++ b/style.css
@@ -1,128 +1,119 @@
-html {
-    scroll-behavior: smooth;
-  }
 body {
-    background-image: url('gradient-small.png');
+    background-color: lightslategray;
+    /* background-image: url('gradient-small.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 200%;
+    background-size: 100% 200%; */
     font-family: 'Josefin Sans', sans-serif;
+}
+h1 {
+    font-size: 10vmin;
+    color: rgb(255, 255, 255);
+    /* font-stretch: wider; */
+    letter-spacing: 2vmin;
+    margin: 5vmin;
+}
+h2 {
+    font-size: 5vmin;
     color: white;
 }
+h3 {
+    font-size: 2.5vmin;
+    color: white;
+}
+p {
+    font-size: 2vmin;
+    font-style: italic;
+    color: white;
+}
+a {
+    font-family: 'Amiko', sans-serif;
+    font-size: 2vmin;
+}
+a:link,
+a:visited {
+    color: blanchedalmond;
+    background-color: transparent;
+    text-decoration: underline;
+}
+hr {
+    width: 75vmin;
+    border: 5pt;
+    height: 0.25vmin;
+    background-color: mintcream;
+    margin: auto;
+    margin-top: 30pt;
+}
+tr {
+    font-size: 5pt;
+    width: 100vmin;
+    height: 50vmin;
+}
+input {
+    width: 20vmin;
+    height: 20vmin;
+}
+button {
+    width: 10vmin;
+    height: 20vmin;
+    font-size: 10vmin;
+    font-family: 'Amiko', sans-serif;
+}
+.larger {
+    width: 10vmin;
+    height: 10vmin;
+}
+.center {
+    text-align: center;
+    /* background-color: black; */
+    border: chartreuse;
+    border-radius: 100px;
+    margin: 50px;
 
+}
+button {
+    border-color: white;
+}
+.bold {
+    font-weight: bold;
+    font-size: 20vmin;
+}
+.underline {
+    font-size: 20pt;
+    text-decoration: underline;
+    margin: 1vmin;
+}
+.ergebnisse {
+    font-size: 10vmin;
+}
+.navbar > div {
+    font-size: 1vmin;
+    padding: 2vmin;
+    margin-left: auto
+    display: inline-block;
+    *display: inline; /* For IE7 */
+    zoom: 1; /* Trigger hasLayout */
+    width: 33%;
+    text-align: center;
+    
+}
+.tools {
+    padding: 1%;
+    
+}
 .glow {
-    color: #ffffffb9;
+    color: #ffffff;
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
     animation: glow 1s ease-in-out infinite alternate;
 }
 
-a {
-    font-family: 'Amiko', sans-serif;
-    font-size: 20px;
-}
-
-a:link,
-a:visited {
-    color: white;
-    background-color: transparent;
-    text-decoration: underline;
-}
-
-hr {
-    width: 300pt;
-    border: 5pt;
-    height: 2pt;
-    background-color: mintcream;
-    margin: auto;
-    margin-top: 30pt;
-}
-
-p {
-    font-size: 20px;
-    font-style: italic;
-    color: white;
-}
-
-h1 {
-    font-size: 100px;
-    color: white;
-    font-stretch: wider;
-    letter-spacing: 8px;
-    margin: 20px;
-}
-
-h2 {
-    font-size: 50px;
-    color: white;
-}
-
-tr {
-    font-size: 20pt;
-    width: 100px;
-    height: 50px;
-}
-
-input {
-    width: 20px;
-    height: 20px;
-}
-
-button {
-    width: 120px;
-    height: 50px;
-    font-size: 20px;
-    font-family: 'Amiko', sans-serif;
-}
-
-.larger {
-    width: 50px;
-    height: 50px;
-}
-
-.center {
-    text-align: center;
-}
-
-.linie {
-    width: auto;
-    height: 2pt;
-    background-color: mintcream;
-    margin: 0px;
-    margin-top: 10pt;
-}
-
-button {
-    border-color: white;
-}
-
-.bold {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.underline {
-    font-size: 20pt;
-    text-decoration: underline;
-    padding-bottom: 10pt;
-}
-
-.ergebnisse {
-    font-size: 30px;
-}
-
-.navbar {
-    font-size: 50px;
-    align-items: center;
-    align-self: center;
-}
-
-/* @-webkit-keyframes glow {
+@-webkit-keyframes glow {
     from {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+        text-shadow: 0 0 1vmin rgb(167, 167, 167), 0 0 2vmin #fff, 0 0 3vmin blanchedalmond, 0 0 4vmin blanchedalmond;
     }
 
     to {
-        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        text-shadow: 0 0 2vmin rgb(150, 150, 150), 0 0 3vmin blanchedalmond, 0 0 4vmin blanchedalmond;
     }
-} */
+}
