--- a/style.css
+++ b/style.css
@@ -50,14 +50,17 @@ tr {
     height: 50vmin;
 }
 input {
-    width: 20vmin;
-    height: 20vmin;
+    width: 5vmin;
+    height: 5vmin;
 }
 button {
-    width: 10vmin;
-    height: 20vmin;
-    font-size: 10vmin;
+    width: 25vmin;
+    height: 10vmin;
+    font-size: 5vmin;
     font-family: 'Amiko', sans-serif;
+}
+label {
+    font-size: 2vmin;
 }
 .larger {
     width: 10vmin;
@@ -71,9 +74,6 @@ button {
     margin: 50px;
 
 }
-button {
-    border-color: white;
-}
 .bold {
     font-weight: bold;
     font-size: 20vmin;
@@ -81,7 +81,6 @@ button {
 .underline {
     font-size: 20pt;
     text-decoration: underline;
-    margin: 1vmin;
 }
 .ergebnisse {
     font-size: 10vmin;
