--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ label {
 .navbar > div {
     font-size: 1vmin;
     padding: 2vmin;
-    margin-left: auto
+    margin-left: auto;
     display: inline-block;
-    *display: inline; /* For IE7 */
+    display: inline; /* For IE7 */
     zoom: 1; /* Trigger hasLayout */
     width: 33%;
     text-align: center;
