--- a/traucons/style.css
+++ b/traucons/style.css
@@ -3,6 +3,11 @@
     to {opacity: 100%;}
   }
 
+@keyframes impressumButton {
+    from {background-color: transparent;}
+    to {background-color: rgb(240, 240, 240);}
+}
+
 @media only screen and (min-width: 2000px) {
 body {
     width: 50%;
@@ -45,9 +50,24 @@ button:hover {
     border-style: solid;
     max-width: 100%;
     height: 15rem;
-
-
 }
 .iconContainer img {
-        width: 200px;
+    width: 200px;
+}
+
+.impressumButton {
+    font-weight: 100;
+    background-color: transparent; 
+    border: none;
+    font-size: larger;
+} 
+.impressumButton:hover {
+    animation-name: impressumButton;
+    animation-duration: 500ms;
+    background-color: rgb(240, 240, 240);
+}
+.fusszeile {
+
+    padding: 1rem;
+    
 }
